# sudachi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: android.md  windows.md
CMakeModules/: CopySudachiFFmpegDeps.cmake  CopySudachiQt5Deps.cmake  CopySudachiSDLDeps.cmake  DownloadExternals.cmake  FindLLVM.cmake  Findgamemode.cmake  GenerateSCMRev.cmake  MSVCCache.cmake  MinGWClangCross.cmake  WindowsCopyFiles.cmake
documentation/building/: ANDROID.md
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  audio_event.cpp  audio_event.h  audio_in_manager.cpp  audio_in_manager.h  audio_manager.cpp  audio_manager.h  audio_out_manager.cpp  audio_out_manager.h  audio_render_manager.cpp  audio_render_manager.h
src/common/: CMakeLists.txt  algorithm.h  announce_multiplayer_room.h  assert.cpp  assert.h  atomic_ops.h  bit_cast.h  bit_set.h  bit_util.h  bounded_threadsafe_queue.h  common_funcs.h  common_precompiled_headers.h  concepts.h  demangle.cpp  demangle.h  div_ceil.h  elf.h  expected.h  fiber.cpp  fiber.h  free_region_manager.h  heap_tracker.cpp  heap_tracker.h  host_memory.cpp  host_memory.h  intrusive_list.h  intrusive_red_black_tree.h  literals.h  lru_cache.h  lz4_compression.cpp  lz4_compression.h  make_unique_for_overwrite.h  memory_detect.cpp  memory_detect.h  (+57 more)
src/dedicated_room/: CMakeLists.txt  sudachi_room.cpp  sudachi_room.rc
tools/: reset-submodules.sh
(+2955 files in other folders)
